# SWAPS-White-Label-Service

./: .gitignore  ADMIN_DASHBOARD_ACCESS.md  AI_ENHANCEMENT_IMPLEMENTATION.md  ALGORITHM_CONSOLIDATION_SUCCESS_REPORT.md  ARCHITECTURAL_ASSESSMENT.md  ARCHITECTURE_AUDIT.md  AUDIT_IMPLEMENTATION.md  BACKUP_README.md  BRUTAL_FINAL_AUDIT_REPORT.md  COLLECTION_ARCHITECTURE.md  COLLECTION_ARCHITECTURE_REVISED.md  COLLECTION_CRAWLER.md  COLLECTION_FIX_PLAN.md  COLLECTION_INVESTIGATION.md  COLLECTION_TRADING_SYSTEM.md  COMPREHENSIVE_EXECUTION_PLAN.md  COMPREHENSIVE_MOCK_DATA_AUDIT_REPORT.md  COMPREHENSIVE_RECOVERY_PLAN.md  DEPLOYMENT.md  DEPLOYMENT_FIXED.md  DEPRECATED_SCRIPTS.md  DEVELOPER_OVERVIEW.md  Dockerfile  ETHEREUM_API_DEMO_RESULTS.md  FINAL_COMPREHENSIVE_SYSTEM_AUDIT.js  FINAL_MVP_READINESS_ASSESSMENT.js  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  INTELLIGENT_NOTIFICATIONS_IMPLEMENTATION.md  MIGRATION.md  ONE_CLICK_START_SWAPS.sh  ORGANIZATION.md  PERFORMANCE_MONITORING_DASHBOARD_IMPLEMENTATION.md  QUICK_DEPLOY_GUIDE.md  README.md  RESTORE.md  SCALING.md  SWAPS-TROUBLESHOOTING.md  SWAPS_COMPREHENSIVE_HANDOVER_DOCUMENT.md  SWAPS_Free_Security_Implementation_Complete.md  (+124 more)
Crawler-data/: README.md  collections-backup.json  crawler-state.json
backend/: .env.example  .env.fix  .env.production  (+38 more)
backend/programs/docker_deploy/swap/: Cargo.toml  Cargo_deploy.toml
backend/programs/docker_deploy/swap/minimal_test/: Cargo.toml
backend/programs/docker_deploy/swap/src/: lib.rs  lib_deploy.rs  state.rs
backend/programs/final_clean_deploy/: Cargo.toml
backend/programs/final_clean_deploy/src/: lib.rs
backend/programs/swap/: Cargo.toml  SECURITY_FIXES_DEPLOYMENT_SUMMARY.md  SWAPS_Rigorous_Test_Report.md  Transaction_Audit_Log.md  test_instruction_parsing.js  test_nft_metadata_enhancement.js  test_reentrancy_logic.js  test_reentrancy_protection.js  test_replay_protection.js  test_rigorous_swaps.js  test_swaps_engine.js
backend/programs/swap/src/: instruction.rs  processor.rs  state.rs  utils.rs
backend/programs/swaps_deploy/programs/swaps_deploy/: Cargo.toml
backend/programs/swaps_deploy/programs/swaps_deploy/src/: README.md
(+609 files in other folders)
