[package]
name = "solana-nft-swap"
version = "0.1.0"
edition = "2021"
resolver = "1"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "~1.16.0"
borsh = "~0.10.0"
thiserror = "~1.0.40"
spl-token = { version = "~3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "~1.1.0", features = ["no-entrypoint"] }
 